// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Transfer > split transfers are retained on child transactions 1`] = `
[
  {
    "account": "one",
    "amount": 5000,
    "base_currency": null,
    "category": null,
    "cleared": 1,
    "date": 20170101,
    "error": null,
    "exchange_rate": null,
    "exchange_rate_date": null,
    "exchange_rate_id": null,
    "exchange_rate_locked": 1,
    "fx_recalculated_at": null,
    "id": "id5",
    "imported_id": null,
    "imported_payee": null,
    "is_child": 0,
    "is_parent": 0,
    "native_amount": 5000,
    "native_currency": null,
    "notes": null,
    "parent_id": null,
    "payee": "id3",
    "payee_name": "",
    "raw_synced_data": null,
    "reconciled": 0,
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transfer_id": "id6",
  },
  {
    "account": "two",
    "amount": -5000,
    "base_currency": "",
    "category": null,
    "cleared": 0,
    "date": 20170101,
    "error": null,
    "exchange_rate": "1",
    "exchange_rate_date": "2017-01-01T00:00:00",
    "exchange_rate_id": null,
    "exchange_rate_locked": 1,
    "fx_recalculated_at": null,
    "id": "id6",
    "imported_id": null,
    "imported_payee": null,
    "is_child": 0,
    "is_parent": 0,
    "native_amount": -5000,
    "native_currency": "",
    "notes": null,
    "parent_id": null,
    "payee": "id2",
    "payee_name": "",
    "raw_synced_data": null,
    "reconciled": 0,
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transfer_id": "id5",
  },
]
`;

exports[`Transfer > split transfers are retained on child transactions 2`] = `
"- First value
+ Second value

@@ -14,11 +14,11 @@
      "fx_recalculated_at": null,
      "id": "id5",
      "imported_id": null,
      "imported_payee": null,
      "is_child": 0,
-     "is_parent": 0,
+     "is_parent": 1,
      "native_amount": 5000,
      "native_currency": null,
      "notes": null,
      "parent_id": null,
      "payee": "id3","
`;

exports[`Transfer > split transfers are retained on child transactions 3`] = `
"- First value
+ Second value

@@ -30,10 +30,74 @@
      "starting_balance_flag": 0,
      "tombstone": 0,
      "transfer_id": "id6",
    },
    Object {
+     "account": "one",
+     "amount": 2000,
+     "base_currency": null,
+     "category": null,
+     "cleared": 1,
+     "date": 20170101,
+     "error": null,
+     "exchange_rate": null,
+     "exchange_rate_date": null,
+     "exchange_rate_id": null,
+     "exchange_rate_locked": 1,
+     "fx_recalculated_at": null,
+     "id": "id7",
+     "imported_id": null,
+     "imported_payee": null,
+     "is_child": 1,
+     "is_parent": 0,
+     "native_amount": 2000,
+     "native_currency": null,
+     "notes": null,
+     "parent_id": "id5",
+     "payee": "id2",
+     "payee_name": "",
+     "raw_synced_data": null,
+     "reconciled": 0,
+     "schedule": null,
+     "sort_order": 123456789,
+     "starting_balance_flag": 0,
+     "tombstone": 0,
+     "transfer_id": "id8",
+   },
+   Object {
+     "account": "one",
+     "amount": -2000,
+     "base_currency": "",
+     "category": null,
+     "cleared": 0,
+     "date": 20170101,
+     "error": null,
+     "exchange_rate": "1",
+     "exchange_rate_date": "2017-01-01T00:00:00",
+     "exchange_rate_id": null,
+     "exchange_rate_locked": 1,
+     "fx_recalculated_at": null,
+     "id": "id8",
+     "imported_id": null,
+     "imported_payee": null,
+     "is_child": 0,
+     "is_parent": 0,
+     "native_amount": -2000,
+     "native_currency": "",
+     "notes": null,
+     "parent_id": null,
+     "payee": "id2",
+     "payee_name": "",
+     "raw_synced_data": null,
+     "reconciled": 0,
+     "schedule": null,
+     "sort_order": 123456789,
+     "starting_balance_flag": 0,
+     "tombstone": 0,
+     "transfer_id": "id7",
+   },
+   Object {
      "account": "two",
      "amount": -5000,
      "base_currency": "",
      "category": null,
      "cleared": 0,"
`;

exports[`Transfer > transfers are properly de-categorized 1`] = `
[
  {
    "account": "one",
    "amount": 5000,
    "base_currency": null,
    "category": "1",
    "cleared": 1,
    "date": 20170101,
    "error": null,
    "exchange_rate": null,
    "exchange_rate_date": null,
    "exchange_rate_id": null,
    "exchange_rate_locked": 1,
    "fx_recalculated_at": null,
    "id": "id6",
    "imported_id": null,
    "imported_payee": null,
    "is_child": 0,
    "is_parent": 0,
    "native_amount": 5000,
    "native_currency": null,
    "notes": null,
    "parent_id": null,
    "payee": "id5",
    "payee_name": "Non-transfer",
    "raw_synced_data": null,
    "reconciled": 0,
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transfer_id": null,
  },
]
`;

exports[`Transfer > transfers are properly de-categorized 2`] = `
"- First value
+ Second value

@@ -17,18 +17,50 @@
      "imported_payee": null,
      "is_child": 0,
      "is_parent": 0,
      "native_amount": 5000,
      "native_currency": null,
-     "notes": null,
+     "notes": "hi",
      "parent_id": null,
-     "payee": "id5",
-     "payee_name": "Non-transfer",
+     "payee": "id4",
+     "payee_name": "",
      "raw_synced_data": null,
      "reconciled": 0,
      "schedule": null,
      "sort_order": 123456789,
      "starting_balance_flag": 0,
      "tombstone": 0,
-     "transfer_id": null,
+     "transfer_id": "id7",
+   },
+   Object {
+     "account": "three",
+     "amount": -5000,
+     "base_currency": "",
+     "category": null,
+     "cleared": 0,
+     "date": 20170101,
+     "error": null,
+     "exchange_rate": "1",
+     "exchange_rate_date": "2017-01-01T00:00:00",
+     "exchange_rate_id": null,
+     "exchange_rate_locked": 1,
+     "fx_recalculated_at": null,
+     "id": "id7",
+     "imported_id": null,
+     "imported_payee": null,
+     "is_child": 0,
+     "is_parent": 0,
+     "native_amount": -5000,
+     "native_currency": "",
+     "notes": "hi",
+     "parent_id": null,
+     "payee": "id2",
+     "payee_name": "",
+     "raw_synced_data": null,
+     "reconciled": 0,
+     "schedule": null,
+     "sort_order": 123456789,
+     "starting_balance_flag": 0,
+     "tombstone": 0,
+     "transfer_id": "id6",
    },
  ]"
`;

exports[`Transfer > transfers are properly de-categorized 3`] = `
"- First value
+ Second value

@@ -1,11 +1,11 @@
  Array [
    Object {
      "account": "one",
      "amount": 5000,
      "base_currency": null,
-     "category": "1",
+     "category": null,
      "cleared": 1,
      "date": 20170101,
      "error": null,
      "exchange_rate": null,
      "exchange_rate_date": null,
@@ -19,22 +19,22 @@
      "is_parent": 0,
      "native_amount": 5000,
      "native_currency": null,
      "notes": "hi",
      "parent_id": null,
-     "payee": "id4",
+     "payee": "id3",
      "payee_name": "",
      "raw_synced_data": null,
      "reconciled": 0,
      "schedule": null,
      "sort_order": 123456789,
      "starting_balance_flag": 0,
      "tombstone": 0,
      "transfer_id": "id7",
    },
    Object {
-     "account": "three",
+     "account": "two",
      "amount": -5000,
      "base_currency": "",
      "category": null,
      "cleared": 0,
      "date": 20170101,"
`;

exports[`Transfer > transfers are properly inserted/updated/deleted 1`] = `
[
  {
    "account": "one",
    "amount": 5000,
    "base_currency": null,
    "category": null,
    "cleared": 1,
    "date": 20170101,
    "error": null,
    "exchange_rate": null,
    "exchange_rate_date": null,
    "exchange_rate_id": null,
    "exchange_rate_locked": 1,
    "fx_recalculated_at": null,
    "id": "id6",
    "imported_id": null,
    "imported_payee": null,
    "is_child": 0,
    "is_parent": 0,
    "native_amount": 5000,
    "native_currency": null,
    "notes": null,
    "parent_id": null,
    "payee": "id5",
    "payee_name": "Non-transfer",
    "raw_synced_data": null,
    "reconciled": 0,
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transfer_id": null,
  },
]
`;

exports[`Transfer > transfers are properly inserted/updated/deleted 2`] = `
"- First value
+ Second value

@@ -29,6 +29,70 @@
      "sort_order": 123456789,
      "starting_balance_flag": 0,
      "tombstone": 0,
      "transfer_id": null,
    },
+   Object {
+     "account": "one",
+     "amount": 5000,
+     "base_currency": null,
+     "category": null,
+     "cleared": 1,
+     "date": 20170101,
+     "error": null,
+     "exchange_rate": null,
+     "exchange_rate_date": null,
+     "exchange_rate_id": null,
+     "exchange_rate_locked": 1,
+     "fx_recalculated_at": null,
+     "id": "id7",
+     "imported_id": null,
+     "imported_payee": null,
+     "is_child": 0,
+     "is_parent": 0,
+     "native_amount": 5000,
+     "native_currency": null,
+     "notes": null,
+     "parent_id": null,
+     "payee": "id3",
+     "payee_name": "",
+     "raw_synced_data": null,
+     "reconciled": 0,
+     "schedule": null,
+     "sort_order": 123456789,
+     "starting_balance_flag": 0,
+     "tombstone": 0,
+     "transfer_id": "id8",
+   },
+   Object {
+     "account": "two",
+     "amount": -5000,
+     "base_currency": "",
+     "category": null,
+     "cleared": 0,
+     "date": 20170101,
+     "error": null,
+     "exchange_rate": "1",
+     "exchange_rate_date": "2017-01-01T00:00:00",
+     "exchange_rate_id": null,
+     "exchange_rate_locked": 1,
+     "fx_recalculated_at": null,
+     "id": "id8",
+     "imported_id": null,
+     "imported_payee": null,
+     "is_child": 0,
+     "is_parent": 0,
+     "native_amount": -5000,
+     "native_currency": "",
+     "notes": null,
+     "parent_id": null,
+     "payee": "id2",
+     "payee_name": "",
+     "raw_synced_data": null,
+     "reconciled": 0,
+     "schedule": null,
+     "sort_order": 123456789,
+     "starting_balance_flag": 0,
+     "tombstone": 0,
+     "transfer_id": "id7",
+   },
  ]"
`;

exports[`Transfer > transfers are properly inserted/updated/deleted 3`] = `
"- First value
+ Second value

@@ -3,96 +3,96 @@
      "account": "one",
      "amount": 5000,
      "base_currency": null,
      "category": null,
      "cleared": 1,
-     "date": 20170101,
+     "date": 20170105,
      "error": null,
      "exchange_rate": null,
      "exchange_rate_date": null,
      "exchange_rate_id": null,
      "exchange_rate_locked": 1,
      "fx_recalculated_at": null,
-     "id": "id6",
+     "id": "id7",
      "imported_id": null,
      "imported_payee": null,
      "is_child": 0,
      "is_parent": 0,
      "native_amount": 5000,
      "native_currency": null,
-     "notes": null,
+     "notes": "This is a note",
      "parent_id": null,
-     "payee": "id5",
-     "payee_name": "Non-transfer",
+     "payee": "id3",
+     "payee_name": "",
      "raw_synced_data": null,
      "reconciled": 0,
      "schedule": null,
      "sort_order": 123456789,
      "starting_balance_flag": 0,
      "tombstone": 0,
-     "transfer_id": null,
+     "transfer_id": "id8",
    },
    Object {
-     "account": "one",
-     "amount": 5000,
-     "base_currency": null,
+     "account": "two",
+     "amount": -5000,
+     "base_currency": "",
      "category": null,
-     "cleared": 1,
-     "date": 20170101,
+     "cleared": 0,
+     "date": 20170105,
      "error": null,
-     "exchange_rate": null,
-     "exchange_rate_date": null,
+     "exchange_rate": "1",
+     "exchange_rate_date": "2017-01-05T00:00:00",
      "exchange_rate_id": null,
      "exchange_rate_locked": 1,
      "fx_recalculated_at": null,
-     "id": "id7",
+     "id": "id8",
      "imported_id": null,
      "imported_payee": null,
      "is_child": 0,
      "is_parent": 0,
-     "native_amount": 5000,
-     "native_currency": null,
-     "notes": null,
+     "native_amount": -5000,
+     "native_currency": "",
+     "notes": "This is a note",
      "parent_id": null,
-     "payee": "id3",
+     "payee": "id2",
      "payee_name": "",
      "raw_synced_data": null,
      "reconciled": 0,
      "schedule": null,
      "sort_order": 123456789,
      "starting_balance_flag": 0,
      "tombstone": 0,
-     "transfer_id": "id8",
+     "transfer_id": "id7",
    },
    Object {
-     "account": "two",
-     "amount": -5000,
-     "base_currency": "",
+     "account": "one",
+     "amount": 5000,
+     "base_currency": null,
      "category": null,
-     "cleared": 0,
+     "cleared": 1,
      "date": 20170101,
      "error": null,
-     "exchange_rate": "1",
-     "exchange_rate_date": "2017-01-01T00:00:00",
+     "exchange_rate": null,
+     "exchange_rate_date": null,
      "exchange_rate_id": null,
      "exchange_rate_locked": 1,
      "fx_recalculated_at": null,
-     "id": "id8",
+     "id": "id6",
      "imported_id": null,
      "imported_payee": null,
      "is_child": 0,
      "is_parent": 0,
-     "native_amount": -5000,
-     "native_currency": "",
+     "native_amount": 5000,
+     "native_currency": null,
      "notes": null,
      "parent_id": null,
-     "payee": "id2",
-     "payee_name": "",
+     "payee": "id5",
+     "payee_name": "Non-transfer",
      "raw_synced_data": null,
      "reconciled": 0,
      "schedule": null,
      "sort_order": 123456789,
      "starting_balance_flag": 0,
      "tombstone": 0,
-     "transfer_id": "id7",
+     "transfer_id": null,
    },
  ]"
`;

exports[`Transfer > transfers are properly inserted/updated/deleted 4`] = `
"- First value
+ Second value

@@ -19,22 +19,22 @@
      "is_parent": 0,
      "native_amount": 5000,
      "native_currency": null,
      "notes": "This is a note",
      "parent_id": null,
-     "payee": "id3",
+     "payee": "id4",
      "payee_name": "",
      "raw_synced_data": null,
      "reconciled": 0,
      "schedule": null,
      "sort_order": 123456789,
      "starting_balance_flag": 0,
      "tombstone": 0,
      "transfer_id": "id8",
    },
    Object {
-     "account": "two",
+     "account": "three",
      "amount": -5000,
      "base_currency": "",
      "category": null,
      "cleared": 0,
      "date": 20170105,"
`;

exports[`Transfer > transfers are properly inserted/updated/deleted 5`] = `
"- First value
+ Second value

@@ -19,51 +19,19 @@
      "is_parent": 0,
      "native_amount": 5000,
      "native_currency": null,
      "notes": "This is a note",
      "parent_id": null,
-     "payee": "id4",
-     "payee_name": "",
+     "payee": "id9",
+     "payee_name": "Not transferred anymore",
      "raw_synced_data": null,
      "reconciled": 0,
      "schedule": null,
      "sort_order": 123456789,
      "starting_balance_flag": 0,
      "tombstone": 0,
-     "transfer_id": "id8",
-   },
-   Object {
-     "account": "three",
-     "amount": -5000,
-     "base_currency": "",
-     "category": null,
-     "cleared": 0,
-     "date": 20170105,
-     "error": null,
-     "exchange_rate": "1",
-     "exchange_rate_date": "2017-01-05T00:00:00",
-     "exchange_rate_id": null,
-     "exchange_rate_locked": 1,
-     "fx_recalculated_at": null,
-     "id": "id8",
-     "imported_id": null,
-     "imported_payee": null,
-     "is_child": 0,
-     "is_parent": 0,
-     "native_amount": -5000,
-     "native_currency": "",
-     "notes": "This is a note",
-     "parent_id": null,
-     "payee": "id2",
-     "payee_name": "",
-     "raw_synced_data": null,
-     "reconciled": 0,
-     "schedule": null,
-     "sort_order": 123456789,
-     "starting_balance_flag": 0,
-     "tombstone": 0,
-     "transfer_id": "id7",
+     "transfer_id": null,
    },
    Object {
      "account": "one",
      "amount": 5000,
      "base_currency": null,"
`;

exports[`Transfer > transfers are properly inserted/updated/deleted 6`] = `
"- First value
+ Second value

@@ -19,19 +19,51 @@
      "is_parent": 0,
      "native_amount": 5000,
      "native_currency": null,
      "notes": "This is a note",
      "parent_id": null,
-     "payee": "id9",
-     "payee_name": "Not transferred anymore",
+     "payee": "id3",
+     "payee_name": "",
      "raw_synced_data": null,
      "reconciled": 0,
      "schedule": null,
      "sort_order": 123456789,
      "starting_balance_flag": 0,
      "tombstone": 0,
-     "transfer_id": null,
+     "transfer_id": "id10",
+   },
+   Object {
+     "account": "two",
+     "amount": -5000,
+     "base_currency": "",
+     "category": null,
+     "cleared": 0,
+     "date": 20170105,
+     "error": null,
+     "exchange_rate": "1",
+     "exchange_rate_date": "2017-01-05T00:00:00",
+     "exchange_rate_id": null,
+     "exchange_rate_locked": 1,
+     "fx_recalculated_at": null,
+     "id": "id10",
+     "imported_id": null,
+     "imported_payee": null,
+     "is_child": 0,
+     "is_parent": 0,
+     "native_amount": -5000,
+     "native_currency": "",
+     "notes": "This is a note",
+     "parent_id": null,
+     "payee": "id2",
+     "payee_name": "",
+     "raw_synced_data": null,
+     "reconciled": 0,
+     "schedule": null,
+     "sort_order": 123456789,
+     "starting_balance_flag": 0,
+     "tombstone": 0,
+     "transfer_id": "id7",
    },
    Object {
      "account": "one",
      "amount": 5000,
      "base_currency": null,"
`;

exports[`Transfer > transfers are properly inserted/updated/deleted 7`] = `
"- First value
+ Second value

@@ -3,74 +3,10 @@
      "account": "one",
      "amount": 5000,
      "base_currency": null,
      "category": null,
      "cleared": 1,
-     "date": 20170105,
-     "error": null,
-     "exchange_rate": null,
-     "exchange_rate_date": null,
-     "exchange_rate_id": null,
-     "exchange_rate_locked": 1,
-     "fx_recalculated_at": null,
-     "id": "id7",
-     "imported_id": null,
-     "imported_payee": null,
-     "is_child": 0,
-     "is_parent": 0,
-     "native_amount": 5000,
-     "native_currency": null,
-     "notes": "This is a note",
-     "parent_id": null,
-     "payee": "id3",
-     "payee_name": "",
-     "raw_synced_data": null,
-     "reconciled": 0,
-     "schedule": null,
-     "sort_order": 123456789,
-     "starting_balance_flag": 0,
-     "tombstone": 0,
-     "transfer_id": "id10",
-   },
-   Object {
-     "account": "two",
-     "amount": -5000,
-     "base_currency": "",
-     "category": null,
-     "cleared": 0,
-     "date": 20170105,
-     "error": null,
-     "exchange_rate": "1",
-     "exchange_rate_date": "2017-01-05T00:00:00",
-     "exchange_rate_id": null,
-     "exchange_rate_locked": 1,
-     "fx_recalculated_at": null,
-     "id": "id10",
-     "imported_id": null,
-     "imported_payee": null,
-     "is_child": 0,
-     "is_parent": 0,
-     "native_amount": -5000,
-     "native_currency": "",
-     "notes": "This is a note",
-     "parent_id": null,
-     "payee": "id2",
-     "payee_name": "",
-     "raw_synced_data": null,
-     "reconciled": 0,
-     "schedule": null,
-     "sort_order": 123456789,
-     "starting_balance_flag": 0,
-     "tombstone": 0,
-     "transfer_id": "id7",
-   },
-   Object {
-     "account": "one",
-     "amount": 5000,
-     "base_currency": null,
-     "category": null,
-     "cleared": 1,
      "date": 20170101,
      "error": null,
      "exchange_rate": null,
      "exchange_rate_date": null,
      "exchange_rate_id": null,"
`;
